--- a/policy.html
+++ b/policy.html
@@ -63,29 +63,29 @@
             действий (операций), совершаемых с использованием средств автоматизации или без использования таких средств
             с персональными данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление,
             изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание,
-            блокирование, удаление, уничтожение персональных данных. <br />
+            блокирование, удаление, уничтожение персональных данных. <br /><br />
             2.7. Оператор — государственный орган, муниципальный орган, юридическое или физическое лицо, самостоятельно
             или совместно с другими лицами организующие и/или осуществляющие обработку персональных данных, а также
             определяющие цели обработки персональных данных, состав персональных данных, подлежащих обработке, действия
-            (операции), совершаемые с персональными данными. <br />
+            (операции), совершаемые с персональными данными. <br /><br />
             2.8. Персональные данные — любая информация, относящаяся прямо или косвенно к определенному или
-            определяемому Пользователю веб-сайта https://prochnostroy.ru. <br />
+            определяемому Пользователю веб-сайта https://prochnostroy.ru. <br /><br />
             2.9. Персональные данные, разрешенные субъектом персональных данных для распространения, — персональные
             данные, доступ неограниченного круга лиц к которым предоставлен субъектом персональных данных путем дачи
             согласия на обработку персональных данных, разрешенных субъектом персональных данных для распространения в
             порядке, предусмотренном Законом о персональных данных (далее — персональные данные, разрешенные для
-            распространения). <br />
-            2.10. Пользователь — любой посетитель веб-сайта https://prochnostroy.ru. <br />
+            распространения). <br /><br />
+            2.10. Пользователь — любой посетитель веб-сайта https://prochnostroy.ru. <br /><br />
             2.11. Предоставление персональных данных — действия, направленные на раскрытие персональных данных
-            определенному лицу или определенному кругу лиц. <br />
+            определенному лицу или определенному кругу лиц. <br /><br />
             2.12. Распространение персональных данных — любые действия, направленные на раскрытие персональных данных
             неопределенному кругу лиц (передача персональных данных) или на ознакомление с персональными данными
             неограниченного круга лиц, в том числе обнародование персональных данных в средствах массовой информации,
             размещение в информационно-телекоммуникационных сетях или предоставление доступа к персональным данным
-            каким-либо иным способом. <br />
+            каким-либо иным способом. <br /><br />
             2.13. Трансграничная передача персональных данных — передача персональных данных на территорию иностранного
             государства органу власти иностранного государства, иностранному физическому или иностранному юридическому
-            лицу. <br />
+            лицу. <br /><br />
             2.14. Уничтожение персональных данных — любые действия, в результате которых персональные данные
             уничтожаются безвозвратно с невозможностью дальнейшего восстановления содержания персональных данных в
             информационной системе персональных данных и/или уничтожаются материальные носители персональных данных.</p>
@@ -100,7 +100,7 @@
             — самостоятельно определять состав и перечень мер, необходимых и достаточных для обеспечения выполнения
             обязанностей, предусмотренных Законом о персональных данных и принятыми в соответствии с ним нормативными
             правовыми актами, если иное не предусмотрено Законом о персональных данных или другими федеральными
-            законами. <br />
+            законами. <br /><br />
             3.2. Оператор обязан:
             — предоставлять субъекту персональных данных по его просьбе информацию, касающуюся обработки его
             персональных данных;
@@ -134,29 +134,29 @@
             обработки персональных данных;
             — обжаловать в уполномоченный орган по защите прав субъектов персональных данных или в судебном порядке
             неправомерные действия или бездействие Оператора при обработке его персональных данных;
-            — на осуществление иных прав, предусмотренных законодательством РФ. <br />
+            — на осуществление иных прав, предусмотренных законодательством РФ. <br /><br />
             4.2. Субъекты персональных данных обязаны:
             — предоставлять Оператору достоверные данные о себе;
-            — сообщать Оператору об уточнении (обновлении, изменении) своих персональных данных. <br />
+            — сообщать Оператору об уточнении (обновлении, изменении) своих персональных данных. <br /><br />
             4.3. Лица, передавшие Оператору недостоверные сведения о себе, либо сведения о другом субъекте персональных
             данных без согласия последнего, несут ответственность в соответствии с законодательством РФ.</p>
 
         <h3 class="text-24 text-black">5. Принципы обработки персональных данных</h3>
         <p class="text-20 text-black">5.1. Обработка персональных данных осуществляется на законной и справедливой
-            основе. <br />
+            основе. <br /><br />
             5.2. Обработка персональных данных ограничивается достижением конкретных, заранее определенных и законных
             целей. Не допускается обработка персональных данных, несовместимая с целями сбора персональных данных.
-            <br />
+            <br /><br />
             5.3. Не допускается объединение баз данных, содержащих персональные данные, обработка которых осуществляется
-            в целях, несовместимых между собой. <br />
-            5.4. Обработке подлежат только персональные данные, которые отвечают целям их обработки. <br />
+            в целях, несовместимых между собой. <br /><br />
+            5.4. Обработке подлежат только персональные данные, которые отвечают целям их обработки. <br /><br />
             5.5. Содержание и объем обрабатываемых персональных данных соответствуют заявленным целям обработки. Не
             допускается избыточность обрабатываемых персональных данных по отношению к заявленным целям их обработки.
-            <br />
+            <br /><br />
             5.6. При обработке персональных данных обеспечивается точность персональных данных, их достаточность, а в
             необходимых случаях и актуальность по отношению к целям обработки персональных данных. Оператор принимает
             необходимые меры и/или обеспечивает их принятие по удалению или уточнению неполных или неточных данных.
-            <br />
+            <br /><br />
             5.7. Хранение персональных данных осуществляется в форме, позволяющей определить субъекта персональных
             данных, не дольше, чем этого требуют цели обработки персональных данных, если срок хранения персональных
             данных не установлен федеральным законом, договором, стороной которого, выгодоприобретателем или поручителем
@@ -177,57 +177,57 @@
         </p>
         <h3 class="text-24 text-black">7. Условия обработки персональных данных</h3>
         <p class="text-20 text-black">7.1. Обработка персональных данных осуществляется с согласия субъекта персональных
-            данных на обработку его персональных данных. <br />
+            данных на обработку его персональных данных. <br /><br />
             7.2. Обработка персональных данных необходима для достижения целей, предусмотренных международным договором
             Российской Федерации или законом, для осуществления возложенных законодательством Российской Федерации на
-            оператора функций, полномочий и обязанностей. <br />
+            оператора функций, полномочий и обязанностей. <br /><br />
             7.3. Обработка персональных данных необходима для осуществления правосудия, исполнения судебного акта, акта
             другого органа или должностного лица, подлежащих исполнению в соответствии с законодательством Российской
-            Федерации об исполнительном производстве. <br />
+            Федерации об исполнительном производстве. <br /><br />
             7.4. Обработка персональных данных необходима для исполнения договора, стороной которого либо
             выгодоприобретателем или поручителем по которому является субъект персональных данных, а также для
             заключения договора по инициативе субъекта персональных данных или договора, по которому субъект
-            персональных данных будет являться выгодоприобретателем или поручителем. <br />
+            персональных данных будет являться выгодоприобретателем или поручителем. <br /><br />
             7.5. Обработка персональных данных необходима для осуществления прав и законных интересов оператора или
             третьих лиц либо для достижения общественно значимых целей при условии, что при этом не нарушаются права и
-            свободы субъекта персональных данных. <br />
+            свободы субъекта персональных данных. <br /><br />
             7.6. Осуществляется обработка персональных данных, доступ неограниченного круга лиц к которым предоставлен
-            субъектом персональных данных либо по его просьбе (далее — общедоступные персональные данные). <br />
+            субъектом персональных данных либо по его просьбе (далее — общедоступные персональные данные). <br /><br />
             7.7. Осуществляется обработка персональных данных, подлежащих опубликованию или обязательному раскрытию в
             соответствии с федеральным законом.</p>
         <h3 class="text-24 text-black">8. Порядок сбора, хранения, передачи и других видов обработки персональных данных
         </h3>
         <p class="text-20 text-black">Безопасность персональных данных, которые обрабатываются Оператором,
             обеспечивается путем реализации правовых, организационных и технических мер, необходимых для выполнения в
-            полном объеме требований действующего законодательства в области защиты персональных данных. <br />
+            полном объеме требований действующего законодательства в области защиты персональных данных. <br /><br />
             8.1. Оператор обеспечивает сохранность персональных данных и принимает все возможные меры, исключающие
-            доступ к персональным данным неуполномоченных лиц. <br />
+            доступ к персональным данным неуполномоченных лиц. <br /><br />
             8.2. Персональные данные Пользователя никогда, ни при каких условиях не будут переданы третьим лицам, за
             исключением случаев, связанных с исполнением действующего законодательства либо в случае, если субъектом
             персональных данных дано согласие Оператору на передачу данных третьему лицу для исполнения обязательств по
-            гражданско-правовому договору. <br />
+            гражданско-правовому договору. <br /><br />
             8.3. В случае выявления неточностей в персональных данных, Пользователь может актуализировать их
             самостоятельно, путем направления Оператору уведомление на адрес электронной почты Оператора
-            Prochnostroy@yandex.ru с пометкой «Актуализация персональных данных». <br />
+            Prochnostroy@yandex.ru с пометкой «Актуализация персональных данных». <br /><br />
             8.4. Срок обработки персональных данных определяется достижением целей, для которых были собраны
             персональные данные, если иной срок не предусмотрен договором или действующим законодательством.
             Пользователь может в любой момент отозвать свое согласие на обработку персональных данных, направив
             Оператору уведомление посредством электронной почты на электронный адрес Оператора Prochnostroy@yandex.ru с
-            пометкой «Отзыв согласия на обработку персональных данных». <br />
+            пометкой «Отзыв согласия на обработку персональных данных». <br /><br />
             8.5. Вся информация, которая собирается сторонними сервисами, в том числе платежными системами, средствами
             связи и другими поставщиками услуг, хранится и обрабатывается указанными лицами (Операторами) в соответствии
             с их Пользовательским соглашением и Политикой конфиденциальности. Субъект персональных данных и/или с
             указанными документами. Оператор не несет ответственность за действия третьих лиц, в том числе указанных в
-            настоящем пункте поставщиков услуг. <br />
+            настоящем пункте поставщиков услуг. <br /><br />
             8.6. Установленные субъектом персональных данных запреты на передачу (кроме предоставления доступа), а также
             на обработку или условия обработки (кроме получения доступа) персональных данных, разрешенных для
             распространения, не действуют в случаях обработки персональных данных в государственных, общественных и иных
-            публичных интересах, определенных законодательством РФ. <br />
-            8.7. Оператор при обработке персональных данных обеспечивает конфиденциальность персональных данных. <br />
+            публичных интересах, определенных законодательством РФ. <br /><br />
+            8.7. Оператор при обработке персональных данных обеспечивает конфиденциальность персональных данных. <br /><br />
             8.8. Оператор осуществляет хранение персональных данных в форме, позволяющей определить субъекта
             персональных данных, не дольше, чем этого требуют цели обработки персональных данных, если срок хранения
             персональных данных не установлен федеральным законом, договором, стороной которого, выгодоприобретателем
-            или поручителем по которому является субъект персональных данных. <br />
+            или поручителем по которому является субъект персональных данных. <br /><br />
             8.9. Условием прекращения обработки персональных данных может являться достижение целей обработки
             персональных данных, истечение срока действия согласия субъекта персональных данных, отзыв согласия
             субъектом персональных данных или требование о прекращении обработки персональных данных, а также выявление
@@ -236,14 +236,14 @@
         </h3>
         <p class="text-20 text-black">9.1. Оператор осуществляет сбор, запись, систематизацию, накопление, хранение,
             уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление,
-            доступ), обезличивание, блокирование, удаление и уничтожение персональных данных. <br />
+            доступ), обезличивание, блокирование, удаление и уничтожение персональных данных. <br /><br />
             9.2. Оператор осуществляет автоматизированную обработку персональных данных с получением и/или передачей
             полученной информации по информационно-телекоммуникационным сетям или без таковой.</p>
         <h3 class="text-24 text-black">10. Трансграничная передача персональных данных </h3>
         <p class="text-20 text-black">10.1. Оператор до начала осуществления деятельности по трансграничной передаче
             персональных данных обязан уведомить уполномоченный орган по защите прав субъектов персональных данных о
             своем намерении осуществлять трансграничную передачу персональных данных (такое уведомление направляется
-            отдельно от уведомления о намерении осуществлять обработку персональных данных). <br />
+            отдельно от уведомления о намерении осуществлять обработку персональных данных). <br /><br />
             10.2. Оператор до подачи вышеуказанного уведомления, обязан получить от органов власти иностранного
             государства, иностранных физических лиц, иностранных юридических лиц, которым планируется трансграничная
             передача персональных данных, соответствующие сведения.</p>
@@ -254,9 +254,9 @@
         <h3 class="text-24 text-black">12. Заключительные положения</h3>
         <p class="text-20 text-black">12.1. Пользователь может получить любые разъяснения по интересующим вопросам,
             касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты
-            Prochnostroy@yandex.ru. <br />
+            Prochnostroy@yandex.ru. <br /><br />
             12.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором.
-            Политика действует бессрочно до замены ее новой версией.  <br />
+            Политика действует бессрочно до замены ее новой версией.  <br /><br />
             12.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу
             https://prochnostroy.ru/policy.</p>
         <div class="btn">
